--- a/medp285/gallery.html
+++ b/medp285/gallery.html
@@ -64,12 +64,7 @@ a:visited{
           height: 300px;
           filter: grayscale(100%);
         }
-        a {
-          z-index: 999;
-          text-decoration: none;
-          font-weight: bold;
-          font-family: Arial, Helvetica, sans-serif;
-        }
+       
         #bottomborder {
           width:150px;
         }
@@ -101,15 +96,16 @@ a:visited{
         </a>
       </section>
     </section>
-    <!---
+    <article class="imgs">
     <section class="img__wrap">
-      <img src="eye.jpg" alt="" />
+      <img src="tech.jpg" alt="video" />
         <section class="img__description_layer">
-            <a href="eyeprojectpage.html">
-             EYE AND iART POSTER
+            <a href="1minvideo.html">
+             Video
               </a>
       </section>
     </section>
+     <!---
     <section class="img__wrap">
       <img src="originaltogepi4.jpg" alt="" />
       <section class="img__description_layer">
